# auto-modeler

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_formatting.py  test_hang.py
auto_modeler/: quick_model.py
src/: __init__.py
tests/: test_model.py
