[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-modeler"
version = "0.1.5"
description = "Rapid ML prototyping wrapper for pandas + scikit-learn"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_modeler*"]
